# wframe

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mprocs.logs.yaml  mprocs.yaml
services/backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 20260627_1242_initial_schema.py  20260627_1515_add_weather_locations.py  20260627_1530_add_custom_url.py  20260627_1600_add_hashed_password.py  20260627_1730_add_github_profiles.py  20260627_2210_add_display_geometry.py  20260627_2240_add_rotation.py  20260627_2310_add_refresh_control.py  6509a40e6c11_add_contrast_to_image_uploads.py  a1b2c3d4e5f6_add_name_to_epapers.py  a4b5c6d7e8f9_add_welcome_configs.py  b5c6d7e8f9a0_add_calendar_configs.py  b95cfc578ce1_add_ha_connections.py  c1d2e3f4a5b6_add_image_uploads.py  c6d7e8f9a0b1_add_welcome_eyebrow_footer.py  e2f3a4b5c6d7_add_vag_stops.py  f3a4b5c6d7e8_add_size_to_bitmaps.py
services/backend/scripts/: README.md
services/backend/src/: conftest.py  main.py
services/backend/src/app/: logging.py
services/backend/src/app/auth/: auth.py  auth_context.py  auth_router.py  auth_schemas.py  auth_service.py  security.py
services/backend/src/app/database/: session.py  status.py  test_connection.py
services/backend/src/app/features/bitmap/: .hn_cache.json  bitmap_models.py  bitmap_repository.py  bitmap_router.py  bitmap_service.py  calendar_repository.py  calendar_router.py  calendar_schemas.py  github_adapter.py  github_router.py  (+20 more)
services/backend/src/app/server/: server_info.py
services/backend/src/app/settings/: __init__.py  config.py  infisical.py
services/backend/src/app/tasks/: example_task.py
(+144 files in other folders)
