[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto" # this way we dont need to mark tests to run in async mode
# Share one event loop across the session so the module-level async engine's
# pooled connections are created and closed on the same loop (otherwise asyncpg
# raises "Event loop is closed" during teardown between async tests).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
exclude-newer = "24 hours" # excluding newer packages to prevent installing supply-chain attacks

[tool.basedpyright]
extraPaths = ["src"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
exclude = [
    ".venv",
    "alembic",
]
reportMissingTypeStubs = false


[project]
name = "wframe-backend"
version = "0.1.0"
description = "wframe backend"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "bcrypt>=4.0",
    "fastapi[standard]>=0.115",
    "httpx>=0.28",
    "jinja2>=3.1",
    "numpy>=2.1",
    "openai>=1.55",
    "pillow>=11.0",
    "playwright==1.60.0",  # keep in lockstep with the Dockerfile base image
    "psutil>=7.2.2",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.12",
    "rich>=15.0.0",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
